@@ -1,3 +1,12 @@
+From 6c5c1e3 (closure-adv):
+==========================
+
+In prisim/interferometry.py,
+
+(*) Replace raising exception in member function
+getThreePointCombinations() of class InterferometerArray with
+warnings. Modify the data flow accordingly
+
 From adf4ca3 (closure-adv):
 ==========================
 
